--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,27 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
-  <title>Tam4</title>
+  <title>TAM4</title>
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+  <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
 </head>
+
 <body>
   <!-- Enable bootstrap 4 theme for ng2-bootstrap -->
-  <script>window.__theme = 'bs4';</script>
+  <script>
+    window.__theme = 'bs4';
+
+  </script>
   <app-root>Loading...</app-root>
 </body>
+
 </html>
