Migration from ng2-bootstrap to ngx-bootstrap

--- a/src/index.html
+++ b/src/index.html
@@ -16,12 +16,12 @@
 </head>
 
 <body>
-  <!-- Enable bootstrap 4 theme for ng2-bootstrap -->
+  <!-- Enable bootstrap 4 theme for ngx-bootstrap -->
   <script>
     window.__theme = 'bs4';
 
   </script>
-  <app-root>Loading...</app-root>
+  <app-root></app-root>
 </body>
 
 </html>
